Hack: Fix off centre splash in IOS Safari
IOS Safari doesn't include the browser controls in 100vh which means
that something vertically centred looks off-centred on initial page
load, which is a bit of a bummer for our splash logo.

This applies a technique from https://css-tricks.com/css-fix-for-100vh-in-mobile-webkit/
to use the -webkit-fill-available to set the height.

I found that Safari removed the padding of the element from the height
of the -webkit-fill-available element so I had to move the padding to a
nested element.

I tried to do this with a fill-available CSS attribute without a
`@supports` hack however I found this broke the height in Chrome
browsers. So it seemed less risky to just apply this to IOS Safari.

I expect this same problem will affect other mobile browsers (since it
seems all vendors are aligning around Safari's 100vh understanding) but
it seemed to look ok in all the other mobile browsers I tested.

Hopefully IOS Safari 15 doesn't break all this.

--- a/src/style.css
+++ b/src/style.css
@@ -113,7 +113,6 @@ html {
   max-width: 36rem;
   margin: auto;
   display: block;
-  margin-bottom: var(--spacing-large);
 }
 
 @media (--breakpoint-large) {
@@ -133,16 +132,29 @@ html {
   max-width: 96rem;
 }
 
-.pane {
+.pane,
+.wrapper--hero { /* hero padding applied for IOS Safari hack */
   padding: 4rem 1rem 2rem;
 }
 
 .pane--hero {
   min-height: 100vh;
   min-height: min(96rem, 100vh);
+  padding: 0; /* removed to accomodate IOS Safari hack */
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
+}
+
+/* Hack to set the min-height to not include the browser controls in IOS
+ * Safari. This fixes the initial splash looking off centre.
+ * Hack from: https://github.com/postcss/postcss-100vh-fix
+ */
+@supports (-webkit-touch-callout: none) {
+  .pane--hero {
+    min-height: -webkit-fill-available;
+  }
 }
 
 .pane--white {
